@@ -45,6 +45,8 @@ dpkg (1.17.14) UNRELEASED; urgency=low
       build flags propagation. Closes: #628516
   * Pass DEB_BUILD_OPTIONS to dpkg-buildflags in buildflags.mk, required to
     get noopt to work at all, for example.
+  * Add a new dpkg-buildflags reproducible feature area:
+    Thanks to Paul Wise <pabs@debian.org>. Closes: #762683
 
   [ Raphaël Hertzog ]
   * Explain better in deb-triggers(5) why interest/activate-noawait should be
